feat(docs): add reference to the template component

--- a/src/docs/designingComponents.mdx
+++ b/src/docs/designingComponents.mdx
@@ -41,3 +41,11 @@ Make sure you aren't duplicating functionality that already exists. Don't hard c
 
 **Call things what they are (even when they are long)**<br/>
 Long names are better than ambiguous names.
+
+## Use Component Template
+
+There is a componet template in the compoents library called CopyPasteThisComponent
+
+You can copy this compoent and replace the name with the name of your new component.
+
+It has the index, compoent, story and test file in the folder so you just have to adapt it to you component.
