--- a/src/docs/designingComponents.mdx
+++ b/src/docs/designingComponents.mdx
@@ -44,7 +44,7 @@ Long names are better than ambiguous names.
 
 ## Use Component Template
 
-There is a componet template in the compoents library called CopyPasteThisComponent
+There is a component template in the components library called CopyPasteThisComponent
 
 You can copy this compoent and replace the name with the name of your new component.
 
