--- a/src/docs/designingComponents.mdx
+++ b/src/docs/designingComponents.mdx
@@ -46,6 +46,6 @@ Long names are better than ambiguous names.
 
 There is a component template in the components library called CopyPasteThisComponent
 
-You can copy this compoent and replace the name with the name of your new component.
+You can copy this component and replace the name with the name of your new component.
 
 It has the index, compoent, story and test file in the folder so you just have to adapt it to you component.
