--- a/src/docs/designingComponents.mdx
+++ b/src/docs/designingComponents.mdx
@@ -48,4 +48,4 @@ There is a component template in the components library called CopyPasteThisComp
 
 You can copy this component and replace the name with the name of your new component.
 
-It has the index, compoent, story and test file in the folder so you just have to adapt it to you component.
+It has the index, component, story and test file in the folder so you just have to adapt it to your component.
