--- a/src/docs/designingComponents.mdx
+++ b/src/docs/designingComponents.mdx
@@ -48,6 +48,6 @@ Long names are better than ambiguous names.
 
 ## Use the component template
 
-The template lives at src/components/CopyPasteThisComponent. Copy and paste replacing the name and other details as relevant.
+The template lives at `src/components/CopyPasteThisComponent`. Copy and paste, replacing the name and other details as relevant.
 
 It contains helpful tips for best practice and a basic structure to get you started.
