--- a/src/docs/tipsForReusableCode.mdx
+++ b/src/docs/tipsForReusableCode.mdx
@@ -6,7 +6,7 @@ import { Meta } from "@storybook/blocks";
 
 ## Context
 
-You need a component to do a slightly different thing than the one you already have but you want to avoid duplicating code. What should you do ? There's no single correct answer. This guide will show you the options and help you appreciate the trade-offs.
+You need a component to do a slightly different thing than the one you already have, but you want to avoid duplicating code. What should you do? There's no single correct answer. This guide will show you the options and help you appreciate the trade-offs.
 
 
 ## Should I modify the existing component ?
