--- a/src/docs/tipsForReusableCode.mdx
+++ b/src/docs/tipsForReusableCode.mdx
@@ -16,7 +16,7 @@ If the change is minor and likely to be useful to other consumers of the compone
 Whilst this is probably the easiest to implement, it comes with the following dangers:
 
 - A progressively more complex component which is harder to understand and maintain (the swiss army knife effect)
-- A risk of regressions to other components which use this component: check snapshots and tests carefully
+- A risk of regressions to other components which use this component; check snapshots and tests carefully
 
 ## Should I create a new component ?
 
