--- a/src/docs/spacingTokens.mdx
+++ b/src/docs/spacingTokens.mdx
@@ -16,11 +16,12 @@ import { OakLI, OakUL } from "@/components/atoms";
 
 <OakUL>
   {Object.entries(oakAllSpacingTokens).map((token, i) => (
-    <OakLI>
+    <OakLI key={i}>
       {token[0]}, {token[1]}px, {parseSpacing(token[0])}
     </OakLI>
   ))}
 </OakUL>
+
 
 ### oakSpaceBetweenTokens
 
