--- a/src/docs/borderTokens.mdx
+++ b/src/docs/borderTokens.mdx
@@ -5,7 +5,7 @@ oakBorderWidthTokens,
 oakBorderRadiusTokens
 } from "@/styles/theme";
 import { parseSpacing } from "@/styles/helpers/parseSpacing";
-import { OakLI, OakUL } from "@/components/atoms";
+import { OakLI, OakUL , OakSpan, OakBox, OakFlex} from "@/components/atoms";
 
 <Meta title="StyleTokens/OakBorderTokens" />
 
@@ -15,7 +15,9 @@ import { OakLI, OakUL } from "@/components/atoms";
 <OakUL>
   {Object.entries(oakBorderWidthTokens).map((token, i) => (
     <OakLI key={i}>
-      {token[0]}, {token[1]}px
+      <OakBox $ba={token[0]} $pa={"all-spacing-3"}>
+        <OakSpan>{token[0]}, {token[1]}px</OakSpan>
+      </OakBox>
     </OakLI>
   ))}
 </OakUL>
@@ -24,7 +26,9 @@ import { OakLI, OakUL } from "@/components/atoms";
 <OakUL>
   {Object.entries(oakBorderRadiusTokens).map((token, i) => (
     <OakLI key={i}>
-      {token[0]}, {token[1]}px
+      <OakBox $ba={"border-solid-s"} $pa={"all-spacing-3"} $height={"all-spacing-7"} $borderRadius={token[0]}>
+        <OakSpan>{token[0]}, {token[1]}px</OakSpan>
+      </OakBox>
     </OakLI>
   ))}
 </OakUL>
