chore: update storybook related deps

--- a/src/docs/defaultTheme.mdx
+++ b/src/docs/defaultTheme.mdx
@@ -1,6 +1,6 @@
 import { oakDefaultTheme } from "@/styles/theme";
 import { parseColor } from "@/styles/helpers/parseColor";
-import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
+import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs/blocks";
 
 <Meta title="StyleTokens/oakDefaultTheme" />
 
