--- a/src/docs/colorTokens.mdx
+++ b/src/docs/colorTokens.mdx
@@ -1,5 +1,5 @@
 import { oakColorTokens } from "@/styles/theme";
-import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
+import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs/blocks";
 
 <Meta title="StyleTokens/OakColorTokens" />
 
