feat: update docs

--- a/src/Introduction.mdx
+++ b/src/Introduction.mdx
@@ -1,4 +1,5 @@
-import { Markdown } from "@storybook/blocks";
+import { Markdown, Meta } from "@storybook/blocks";
 import readme from "../README.md?raw";
 
+<Meta title="docs/Introduction" />
 <Markdown>{readme}</Markdown>
