--- a/src/docs/borderTokens.mdx
+++ b/src/docs/borderTokens.mdx
@@ -4,7 +4,7 @@ import { oakBorderWidthTokens, oakBorderRadiusTokens } from "@/styles/theme";
 import { parseSpacing } from "@/styles/helpers/parseSpacing";
 import { OakLI, OakUL, OakSpan, OakBox, OakFlex } from "@/components/atoms";
 
-<Meta title="style tokens/OakBorderTokens" />
+<Meta title="style tokens/Border tokens" />
 
 # OakBorderTokens
 
