--- a/src/docs/colorTokens.mdx
+++ b/src/docs/colorTokens.mdx
@@ -1,7 +1,7 @@
 import { oakColorTokens } from "@/styles/theme";
 import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
 
-<Meta title="style tokens/OakColorTokens" />
+<Meta title="style tokens/Color tokens" />
 
 # OakColorTokens
 
