--- a/src/docs/defaultTheme.mdx
+++ b/src/docs/defaultTheme.mdx
@@ -2,7 +2,7 @@ import { oakDefaultTheme } from "@/styles/theme";
 import { parseColor } from "@/styles/helpers/parseColor";
 import { Meta, ColorPalette, ColorItem } from "@storybook/blocks";
 
-<Meta title="style tokens/oakDefaultTheme" />
+<Meta title="style tokens/Theme tokens (oakDefaultTheme)" />
 
 # oakDefaultTheme
 
