--- a/src/docs/designingComponents.mdx
+++ b/src/docs/designingComponents.mdx
@@ -1,17 +1,16 @@
 import { Meta } from "@storybook/blocks";
 
-<Meta title="docs/HowToDesignComponents" />
+<Meta title="docs/How to design components" />
 
 # How To Design New Components
 
 ## Where to put new components ?
 
-Read the [organisational structure](/docs/docs-organisationalstructure--docs) section of this storybook carefully.
-The decision of where to put a component is not always clear cut, the important thing is to have a rationale for your decision.
+Read the [organisational structure](/docs/docs-organisational-structure--docs) section of this storybook carefully.
 
 ## How to name new components ?
 
-Read the [naming conventions](/docs/docs-namingconventions--docs) section of this storybook carefully.
+Read the [naming conventions](/docs/docs-naming-conventions--docs) section of this storybook carefully.
 
 ## What is the $ for ?
 
