--- a/src/docs/spacingTokens.mdx
+++ b/src/docs/spacingTokens.mdx
@@ -8,7 +8,7 @@ import {
 import { parseSpacing } from "@/styles/helpers/parseSpacing";
 import { OakLI, OakUL } from "@/components/atoms";
 
-<Meta title="style tokens/OakSpacingTokens" />
+<Meta title="style tokens/Spacing tokens" />
 
 # OakSpacingTokens
 
