--- a/src/docs/namingConventions.mdx
+++ b/src/docs/namingConventions.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/blocks";
 
-<Meta title="docs/NamingConventions" />
+<Meta title="docs/Naming conventions" />
 
 # Naming Conventions and Exports
 
