chore: update docs

--- a/src/docs/organisationalStructure.mdx
+++ b/src/docs/organisationalStructure.mdx
@@ -5,7 +5,7 @@ import { Meta } from "@storybook/blocks";
 # Organisational structure
 
 ⚠️ When creating a new component and in doubt of which category or folder it should belong to, discuss in #oak-components Slack channel.
-⚠️ If you need to use a component which is inside a repo specific directory, you should pull it into "Shared components".
+⚠️ If you need to reuse a component which is inside a repo specific directory, it is your task to pull it into "Shared components".
 
 ## Shared components
 
