feat: replace deprecated button occurences with OakButton

--- a/src/docs/reusableCode.mdx
+++ b/src/docs/reusableCode.mdx
@@ -32,7 +32,7 @@ When you want to use the majority of the existing component but with a few chang
 ### Pure composition
 
 - Simply return the existing component perhaps with some props fixed at certain values or with some extra functionality added in the body of the component.
-- An example of this is `OakPrimaryButton` which is a specialised version of InternalShadowRectButton
+- An example of this is `OakButton` which is a specialised version of InternalShadowRectButton
 - This works when you only need to add additional functionality.
 
 ### Quasi-inheritance
